Adding new job experience

--- a/index.html
+++ b/index.html
@@ -142,7 +142,12 @@
           <h2 class="mb-5">Work Experience</h2>
 
           <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between"
+            class="
+              resume-item
+              d-flex
+              flex-column flex-md-row
+              justify-content-between
+            "
           >
             <div class="resume-content">
               <h3 class="mb-0">Software Engineer</h3>
@@ -185,7 +190,13 @@
           </div>
 
           <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5"
+            class="
+              resume-item
+              d-flex
+              flex-column flex-md-row
+              justify-content-between
+              mb-5
+            "
           >
             <div class="resume-content">
               <h3 class="mb-0">Frontend Software Engineer</h3>
@@ -220,6 +231,43 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">July 2019 - Jan 2021</span>
+            </div>
+          </div>
+
+          <div
+            class="
+              resume-item
+              d-flex
+              flex-column flex-md-row
+              justify-content-between
+              mb-5
+            "
+          >
+            <div class="resume-content">
+              <h3 class="mb-0">Web Developer</h3>
+              <div class="subheading mb-3">Freelance</div>
+              <ul>
+                <li>
+                  Create websites for clients utilizing HTML5, CSS3, JavaScript,
+                  Bootstrap
+                </li>
+                <li>
+                  Maintained website by updating content, implementing new
+                  technology and monitoring performance
+                </li>
+                <li>
+                  Ensured all web site development follows W3C web standards and
+                  ADA compliance for accessibility and other good practices for
+                  web design and development
+                </li>
+                <li>
+                  Collaborated with clients to generate web content to meet
+                  their needs
+                </li>
+              </ul>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Jan 2017 – June 2020</span>
             </div>
           </div>
         </div>
@@ -325,7 +373,12 @@
           <h2>Education</h2>
 
           <div
-            class="resume-item d-flex flex-column flex-md-row justify-content-between"
+            class="
+              resume-item
+              d-flex
+              flex-column flex-md-row
+              justify-content-between
+            "
           >
             <div class="resume-content">
               <h3 class="mb-0">Ryerson University</h3>
